dclone package version history

Version 1.4-2, October 16, 2011
    * Make use of rjags:::parallelseeds to control RNG settings for
      initial values in parallel computations.

Version 1.4-1, September 28, 2011
    * plot.dcdiag: dcdiag colnames from .dcFitwere non standard,
      so plot failed to select columns. Now fixed.
    * dc.fit and dc.parfit: got n.chains argument for clean
      handling in parrallel work. (dc.parfit failed with
      partype="both".)
    * plotClusterSize: can plot if length(size) < n
      without error/warnings.
    * parLoadModule, parUnloadModule, parListModules,
      parSetFactory, parListFactories: workers returned values as
      expected, but did not actually made changes, bugs fixed,
      allowing full control of JAGS settings on workers.
    * dcdiag and dctable: return NA when subroutines fail
      (gelman.diag, lambdamax.diag, chisq.diag).
      dc.fit and dc.parfit neglects these NA values
      when issueing warning based on Rhat.
    * dcoptions()$overwrite changed to TRUE by default,
      this might spare some headaches when going parallel.
    * lambdamax.diag returned sd instead of variance for
      one parameter case, bug fixed (reported by S Lele).

Version 1.4-0, September 28, 2011
    * Major CRAN release with new parallel features.

Version 1.3-6, September 7, 2011
    * jags.fit return jags model with n.clones
      attribute when n.iter=0.
    * parJagsModel and parCodaSamples: passes the
      n.clones info from data argument.
    * jagsModel and codaSamples added as wrapper
      around jags.model and coda.samples functions of
      rjags package to track dclone information passed
      through data argument and allow custommodel
      specification of model argument (similarly to par* 
      versions of similar functions).
    * .onLoad added to zzz.R

Version 1.3-5, August 23, 2011
    * n.update=1000 is now the default instead of 0
      to ensure independence after adaptation.