@@ -1,8 +1,14 @@
 dclone package version history
 
 Version 1.4-2, October 16, 2011
-    * Make use of rjags:::parallelseeds to control RNG settings for
-      initial values in parallel computations.
+    * New function: parallel.inits make use of rjags:::parallelseeds 
+      to control RNG settings for initial values in parallel computations.
+    * parJagsModel: adapted to initial RNG setup by parallel.inits.
+    * jags.parfit: adapted to initial RNG setup by parallel.inits.
+    * dc.parfit: adapted to initial RNG setup by parallel.inits
+      (partype=both, also partype=parchains via jags.parfit,
+      partype=balancing depends on underlying JAGS settings
+      as in jags.fit).
 
 Version 1.4-1, September 28, 2011
     * plot.dcdiag: dcdiag colnames from .dcFitwere non standard,
